- Selling gear, weapons, and cyberware that are not inside something else now properly gives characters money.
- The Select Vehicle window no longer automatically resizes to an unusable size on smaller screens.
- Removing qualities that have added other qualities, e.g. Prototype Transhuman, no longer causes a crash.

Build 220
Application Changes:
- Deleting or selling gear that has plugins inside of it no longer causes a crash.
- Characters are now properly compensated when selling an item that is either located inside another item or adds items with non-zero cost.
- When attempting to delete a weapon mount mod, the program will now properly show a confirmation dialog before deleting the mod if the appropriate setting is set.
- If the program is set to confirm deletions, attempts to sell items in Career mode now also confirm if the user wishes to go through with the sale.

Build 219
Application Changes:
- Fixed a bug preventing any override, custom, or amend files from processing.
- Fixed a source of unpredictable crashes that would happen seemingly for no reason at random points in time.
- Fixed crashes that could happen where removing certain plugins, accessories, and other items with parentage in Career mode. Fixes #4681.

Build 218
Application Changes:
- For improvements that require specifying text where possible options or suggestions for the text are loaded from a data file, these options now show up translated to the program's UI language if it is not English.
- Fixed an issue where adding plugins to cyberlimbs would cause Chummer to freeze up.
- Increased the speed of exporting characters by between 10% and 60% (depending on the language and custom dataset combinations used).

Data Changes:
- Fixed the stats for Boggles so that they appear and can be processed properly when creating a new critter. Fixes #4679.

Build 217
Application Changes:
- Adding a new non-advanced lifestyle that is eligible for Trust Fund no longer causes a crash. Fixes #4601.